Fix to sheen/reverting last change of h2 animation until mainline alignment is established;

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -274,7 +274,7 @@ p{
             }
             #pageHeadlineHoloSheen{
                 position:absolute;
-                top: 24%;
+                top: 17%;
                 pointer-events: none;
                 z-index: -5;
                 width: 100%;
