--- a/child-pages/style/style-animation.css
+++ b/child-pages/style/style-animation.css
@@ -341,7 +341,7 @@ body{
 
             h2{
                 grid-row: 3;
-                grid-column: 2;
+                grid-column: 3;
                 font-size: 0.9em;
                 text-align: center;
                 width: 100%;
